# vad-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: record.rs  wav.rs
src/: helpers.rs  lib.rs  session.rs  vad.rs
