[workspace]
members = ["examples/whisper"]

[package]
name = "vad-rs"
version = "0.1.5"
edition = "2021"
description = "Speech detection using silero vad in Rust"
license = "MIT"

[dependencies]
eyre = "0.6.12"
ndarray = "0.17.1"
ort = "=2.0.0-rc.10"
samplerate = { version = "0.2.4", optional = true }
ebur128 = { version = "0.1.10", optional = true }
ringbuffer = "0.16.0"

[dev-dependencies]
hound = { version = "3.5.1" }
cpal = "0.16.0"
once_cell = "1.21.3"


[features]
default = ["helpers"]
helpers = ["dep:ebur128", "dep:samplerate"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
load-dynamic = ["ort/load-dynamic"]
